--- a/angular/src/tools/widgets/data-table/data-table.component.html
+++ b/angular/src/tools/widgets/data-table/data-table.component.html
@@ -5,38 +5,43 @@
         <mat-icon>add</mat-icon>
     </button>
 
-    <table mat-table [dataSource]="dataMongo" class="mat-elevation-z8">
+    <div class="mat-elevation-z8" style="overflow: auto;">
 
-        <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let elements">
-                <div (click)="onClickDelete(elements)" class="mt-2" title="Excluir">
-                    <label class="cssLabel text-danger"><i class="fas fa-trash-alt"></i></label>
-                </div>
-            </td>
-        </ng-container>
+        <table mat-table [dataSource]="dataMongo">
 
-        <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let elements">
-                <div (click)="onClickEdit(elements)" class="mt-2" title="Editar">
-                    <label class="cssLabel text-primary"><i class="fas fa-eye"></i></label>
-                </div>
-            </td>
-        </ng-container>
-
-        <div [hidden]="!(dataSource != null)" *ngFor="let element of options.data;">
-
-            <!-- Column -->
-            <ng-container matColumnDef="{{ element.name }}">
-                <th mat-header-cell *matHeaderCellDef> {{ element.text }}</th>
-                <td mat-cell *matCellDef="let elements"> {{ elements[element.name] }}</td>
+            <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let elements" class="min-width-header">
+                    <div (click)="onClickDelete(elements)" class="mt-2" title="Excluir">
+                        <label class="cssLabel text-danger"><i class="fas fa-trash-alt"></i></label>
+                    </div>
+                </td>
             </ng-container>
 
-        </div>
+            <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let elements" class="min-width-header">
+                    <div (click)="onClickEdit(elements)" class="mt-2" title="Editar">
+                        <label class="cssLabel text-primary"><i class="fas fa-eye"></i></label>
+                    </div>
+                </td>
+            </ng-container>
 
-        <tr [hidden]="!options" mat-header-row *matHeaderRowDef="dataHeaders"></tr>
-        <tr [hidden]="!options" mat-row *matRowDef="let row; columns: dataHeaders;"></tr>
-    </table>
+            <div [hidden]="!(dataSource != null)" *ngFor="let element of options.data;">
+
+                <!-- Column -->
+                <ng-container matColumnDef="{{ element.name }}">
+                    <th mat-header-cell *matHeaderCellDef> {{ element.text }}</th>
+                    <td mat-cell *matCellDef="let elements" class="min-width"> {{ elements[element.name] }}</td>
+                </ng-container>
+
+            </div>
+
+            <tr [hidden]="!options" mat-header-row *matHeaderRowDef="dataHeaders"></tr>
+            <tr [hidden]="!options" mat-row *matRowDef="let row; columns: dataHeaders;"></tr>
+        </table>
+
+    </div>
+
 
 </div>
